--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ os:
   - linux
   - osx
 
+install: false
 script:
-- env GO111MODULE=on go build
-- env GO111MODULE=on go test
+- env GO111MODULE=on go test ./...
 
 # calls goreleaser
 deploy:
