--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,7 @@
 # .goreleaser.yml
 archive:
   format: binary
+  name_template: "{{ .Binary }}_{{ .Os }}_{{ .Arch }}"
 builds:
   # You can have multiple builds defined as a yaml list
   -
